--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -29,11 +29,13 @@
 
     <div class="w3-bar-item2">
         <div style="width:64px;margin:auto">
-            <a href="/{{language.id}}"  title="Go to home">
+            <a href="/{{language.id}}" title="Go to home">
                 <svg version="1.1" id="js_logo_unten" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
                 <style type="text/css">
-                    .st0{fill:#CC1B59;}
+                    .st0 {
+                        fill: #CC1B59;
+                    }
                 </style>
                 <g>
                     <path class="st0" d="M38.8,5.8l-26.2,7.6c-0.9,0.3-1.4,1.2-1.1,2.1l0.7,2.6c1.3-1.2,2.9-2.2,4.7-2.7c4.7-1.4,9.6,0.5,12.3,4.3
