--- a/website/src/pages/supportus.html
+++ b/website/src/pages/supportus.html
@@ -3,7 +3,7 @@
 
 <div class="w3-container w3-content">
 
-    <h1>Support allmyforks.com</h1>
+    <h1>Support AllMyForks.com</h1>
 
     There are several ways to support us.
 
@@ -29,7 +29,7 @@
     <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
        target="new">Github</a>
 
-       
+
     <h3>We are more than happy to receive a donation from you</h3>
     <ul>
 
