--- a/website/src/pages/forklist.html
+++ b/website/src/pages/forklist.html
@@ -1,6 +1,6 @@
 {{> header-list}}
 
-<div class="w3-container extralarge-content ">
+<div class="w3-container extralarge-content js-coin-select-outer">
     <div class="js-coin-select">
         {{#each selectCoins}}
         {{#if selected}}
