--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -8,7 +8,7 @@
 
     <meta property="og:title" content="{{title}}"/>
     <meta name="description" content="{{description}}"/>
-    <meta name="theme-color" content="#c66bdb">
+    <meta name="theme-color" content="#CC1B59">
 
     <meta property="og:type" content="website">
     <meta property="og:image" content="splash_600x315.png">
