--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -1,12 +1,14 @@
+<!DOCTYPE html>
 <html lang="{{language.id}}">
 
 <head>
     <title>{{{title}}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5"/>
-
+    <meta name="keywords" content="bitcoin, forks, btc, gives, allmyforks, sum" />
 
     <meta property="og:title" content="{{title}}"/>
+    <meta name="og:description" content="{{description}}"/>
     <meta name="description" content="{{description}}"/>
     <meta name="theme-color" content="#CC1B59">
 
@@ -15,6 +17,7 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="315">
+    <link rel="canonical" href="https://allmyforks.com{{url}}" />
 
     {{#each selectLanguages}}
     {{#ifCond id '==' ../language.id}}
@@ -27,6 +30,13 @@
     {{#ifCond id '!=' ../language.id}}
     <link rel="alternate" href="https://allmyforks.com{{value}}" hreflang="{{id}}">
     {{/ifCond}}
+
+    {{#ifCond id '==' 'en'}}
+    {{#ifCond urlAfterLanguage '==' ''}}
+    <link rel="alternate" href="https://allmyforks.com/" hreflang="en">
+    {{/ifCond}}
+    {{/ifCond}}
+
     {{/each}}
 
     <link rel="shortcut icon" href="/favicon.ico">
