--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5"/>
     <meta name="keywords" content="bitcoin, forks, btc, gives, allmyforks, sum" />
 
-    <meta property="og:title" content="{{title}}"/>
-    <meta name="og:description" content="{{description}}"/>
     <meta name="description" content="{{description}}"/>
     <meta name="theme-color" content="#CC1B59">
 
+
+    <meta property="og:title" content="{{title}}"/>
+    <meta property="og:description" content="{{description}}"/>
     <meta property="og:type" content="website">
     <meta property="og:image" content="splash_600x315.png">
     <meta property="og:image:type" content="image/png">
