--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="{{title}}"/>
     <meta property="og:description" content="{{description}}"/>
     <meta property="og:type" content="website">
-    <meta property="og:image" content="splash_600x315.png">
+    <meta property="og:image" content="https://allmyforks.com/splash_600x315.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="315">
